# Scaler-Meta-Competition-2026

./: .gitignore  Dockerfile  PROPOSAL.md  README.md  check_server.py  client.py  inference.py  inference_new.py  inference_old.py  openenv.yaml  plan.txt  pyproject.toml  requirements.txt  validate.py
app/: __init__.py  environment.py  main.py  models.py  reward.py
app/data/: deploy_history.py  log_templates.py  metrics.py  service_graph.py  slo.py  trace_templates.py
app/graders/: task1_grader.py  task2_grader.py  task3_grader.py  task4_grader.py  task5_grader.py  task6_grader.py
app/scenarios/: base.py  task10_rate_limit.py  task11_db_migration_lock.py  task12_health_flap.py  task13_pod_eviction.py  task14_cascading_timeout.py  task15_secret_rotation.py  task16_log_storm.py  task1_memory_leak.py  task2_db_cascade.py  task3_race_condition.py  task4_dns_failure.py  task5_cert_expiry.py  task6_network_partition.py  task7_kafka_lag.py  task8_redis_failover.py  task9_disk_full.py
baseline/: run_baseline.py  run_heuristic_baseline.py  run_nvidia_baseline.py  run_openai_baseline.py
eval/: run_eval.py
examples/torchforge_grpo/: README.md  config.yaml  run_episode.py
server/: app.py
tests/: test_env.py
